--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
 </head>
 
 <body>
-  <h1>sup this is dex's website</h1>
-      <h2><i>a really cool one as well</i></h2> <img src="dex.gif" class=".small-image" alt="wip running guy">
-  <img src="welcome.png" alt="a nightcrawler saying hi">
+  <div class="center-container">
+    <div style="display: flex; align-items: center;">
+      <a href="/">
+        <img src="dex.gif" class="small-image" alt="wip running guy">
+      </a>
+      <h1>sup this is dex's website</h1>
+      <h2 style="margin-left: 10px; font-size: 16px;" ><i>   a really cool one as well</i></h2>
+    </div>
+  </div>
+  <h1>About this site</h1>
+  <p>this is a little website to have link and other stuff that i made on the internet</p>
   <hr>
-    <h1>About this site</h1>
-     <p>this is a little website to have link and other stuff that i made on the internet</p>
+  <h3>cool internet badges i collected:</h3>
+  <img src="opengit.jpg" alt="This website is open soruce on github!">
+  <img src="discord.gif" alt="Use discord">
+  <img src="internetexploer.gif" alt="best viewed with internter exploer">
+  <img src="madewithmac.gif" alt="this website was made on a mac">
+  <a rel="me" href="https://mstdn.social/@Drwhomust" target="_blank"></a>
   <hr>
-      <h3>cool internet badges i collected:</h3>
-          <img src="opengit.jpg" alt="This website is open soruce on github!">
-         <img src="discord.gif" alt="Use discord">
-         <img src="internetexploer.gif" alt="best viewed with internter exploer">
-         <img src="madewithmac.gif" alt="this website was made on a mac">
-     <a rel="me" href="https://mstdn.social/@Drwhomust" target="_blank"></a>
- <hr>
- <img src="what-is-good.png" alt="a nightcrawler chilling">
+  <img src="what-is-good.png" alt="a nightcrawler chilling">
 </body>
+</html>
