--- a/404.html
+++ b/404.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
+<html style="width:100%;height:100%;background-color:black;">
 <html lang="">
+  <link rel="stylesheet" href="styles.css">
   <head>
-    <title>404 not found</title>
-    <link rel="stylesheet" href="earthbound.css">
-  </head>
+     <title>404 not found</title>
+      <link rel="stylesheet" href="earthbound.css">
+      </div>
+    </head>
   <body>
-  <h1>404 NOT FOUND</h1>
-  <hr>
+    <div class="center-container">
+      <div style="display: flex; align-items: center;">
+      <h1>404 NOT FOUND</h1>
+      </div>
   <p>the lizard looked everywhere... but could not find anything<p>
   <br>
   <p>maybe go back to home???<p>
